Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countdown to a Special Day</title>
+    <title>Countdown to Banish that Beyond</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Event Countdown</h1>
-      <p>Time until our big event!</p>
       <div id="countdown" class="countdown">
         <!-- The countdown will be injected here by JavaScript -->
       </div>
