--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--
     <div class="container">
+      <h1>Event Countdown</h1>
+      <p>Time until our big event!</p>
       <div id="countdown" class="countdown">
-        <!-- The countdown will be injected here by JavaScript -->
       </div>
     </div>
+    -->
     <script src="script.js"></script>
   </body>
 </html>
